--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -158,17 +158,19 @@ struct hello {
   }
 };
 
-template &lt;class T = class Greater&gt;
+class Greater;
+
+template &lt;class T = Greater&gt;
 struct example {
-  //T h;
+  T h;
   iworld&amp; w;
 };
 
 int main() {
   const auto injector = di::make_injector(
-    di::bind&lt;iworld&gt;().to&lt;world&gt;()        // bind interface to implementation
-  , di::bind&lt;&gt;().to(42)                   // bind int to value 42
-  , di::bind&lt;class Greater&gt;().to&lt;hello&gt;() // bind template to type
+    di::bind&lt;iworld&gt;().to&lt;world&gt;()    // bind interface to implementation
+  , di::bind&lt;&gt;().to(42)               // bind int to value 42
+  , di::bind&lt;Greater&gt;().to&lt;hello&gt;()   // bind template to type
   );
 
   injector.create&lt;example&gt;();
